[package]
name = "fast-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
derive_more = "0.99.17"
slab = "0.4.9"

[dev-dependencies]
rand = "0.8.5"

[[bin]]
name = "server"
path = "src/srv/main.rs"

[[bin]]
name = "test"
path = "src/test/main.rs"
