[package]
name = "fast-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
rusqlite = "0.30.0"
actix = "0.13.1"
actix-web = "4.4.0"
actix-rt = "2.9.0"
actix-web-actors = "4.2.0"
tokio = {version = "1.34.0", features = ["full"]}
firebase-auth = "0.3.1"


[dev-dependencies]
rand = "0.8.5"

[[bin]]
name = "server"
path = "src/srv/main.rs"

[[bin]]
name = "test"
path = "src/test/main.rs"

[[bin]]
name = "api"
path = "src/api/main.rs"
